src/test/deca/context/valid/expressions/not_beaucoup.deca
// Description:
//    Beaucoup de not
//
// Resultats:
//    Context passe
//
// Historique:
//    cree le 08/01/2022

{
    !!!!!!!!!!!!!!!!!!!!!!!!!!false;
}
